--- a/search_compania.html
+++ b/search_compania.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Трудоустройств выпускников</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
-	<script type="text/javascript" src="js/jquery.fancybox.pack.js?v=2.1.5"></script>
-	<script src="js/app.js" type="text/javascript"></script>
+	<script type="text/javascript" src="assets/js/jquery.fancybox.pack.js?v=2.1.5"></script>
+	<script src="assets/js/app.js" type="text/javascript"></script>
 </head>
 <body>
 	<header>
